Some styling and updated DB

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         <header>
             <h1 class="heading_page">BPHC Google Meet Logon</h1>
         </header>
-
+        <!-- <div class="shadow"></div> -->
+        
         <div class="buttons">
             <button class="button_regis">
                 Register
@@ -63,7 +64,9 @@
         </main>
 
 
-
+        <footer>
+            Made with <span>&hearts;</span> by Nihar Bansal.
+        </footer>
 
 
 
