Some stylings to header

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <body>
         <header>
             <h1 class="heading_page">BPHC Google Meet Logon</h1>
+            <h2 class="date_time_holder"></h2>
         </header>
         <!-- <div class="shadow"></div> -->
         
