--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
                     
                 </div>
             
-                <button type="submit" class="regis-submit">Submit</button>
+                <div class="submit_regis_wrapper">
+                    <button type="submit" class="regis-submit">Submit</button>
+                </div>
 
                 <div class="confirmation"></div>
 
