Added some meta info

--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <html>
     <head>
         <title>Meet Logon</title>
+	<meta charset="UTF-8">
+        <meta name="description" content="BPHC Google Meet Logon Helper">
+        <meta name="keywords" content="HTML, CSS, Javascript, Google Meet Helper, BPHC">
+        <meta name="author" content="Nihar Bansal">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <link href="style.css" rel="stylesheet" type="text/css">
         <script src="./script.js" type="text/javascript" defer></script>
         <script src="https://kit.fontawesome.com/53df90b9c1.js" crossorigin="anonymous"></script>
